--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/patryk-automaty/pw-masterclass/issues"
   },
-  "homepage": "https://github.com/patryk-automaty/pw-masterclass#readme"
+  "homepage": "https://github.com/patryk-automaty/pw-masterclass#readme",
+  "devDependencies": {
+    "@playwright/test": "^1.55.1"
+  }
 }
